--- a/01 - InSecure-Box/public/index.html
+++ b/01 - InSecure-Box/public/index.html
@@ -9,21 +9,19 @@
     <link rel="stylesheet" href="static/css/app.css">
   </head>
   <body>
-    <div class="row">
+    <div class="row" style="height: calc(100vh-10rem);">
       <div class="large-12 columns">
         <ul class="tabs" id="nav-tabs" data-tabs>
           <li class="tabs-title is-active" role="presentation">
-            <a href="#users-tab" aria-selected="true" role="tab" aria-controls="users-tab" id="users-tab-label">Users</a></li>
-          <li class="tabs-title" role="presentation">
             <a href="#documents-tab" role="tab" aria-controls="documents-tab" aria-selected="false" id="documents-tab-label">Documents</a></li>
           <li class="tabs-title" role="presentation">
-            <a href="#messages-tab" role="tab" aria-controls="messages-tab" aria-selected="false" id="messages-tab-label">Messages</a></li>
+            <a href="#shared-tab" role="tab" aria-controls="shares-tab" aria-selected="false" id="shared-tab-label">Shares</a></li>
           <li class="tabs-title" role="presentation">
-            <a href="#debug-tab" role="tab" aria-controls="debug-tab" aria-selected="false" id="debug-tab-label">Debug</a></li>
+            <a href="#users-tab" aria-selected="true" role="tab" aria-controls="users-tab" id="users-tab-label">Users</a></li>
         </ul>
 
         <div class="tabs-content" data-tabs-content="nav-tabs">
-          <div class="tabs-panel is-active" id="users-tab" role="tabpanel" aria-hidden="false" aria-labelledby="users-tab-label">
+          <div class="tabs-panel" id="users-tab" role="tabpanel" aria-hidden="false" aria-labelledby="users-tab-label">
             <a href="#" class="button" onclick="listUsers()">List</a>
             <a href="#" class="button" onclick="createUser()">Create</a>
             <a href="#" class="button" onclick="checkPassword()">Check</a>
@@ -51,8 +49,24 @@
             <a href="#" class="alert button">Alert Btn</a><br/>
             <a href="#" class="secondary button">Secondary Btn</a></p-->
           </div>
-          <div class="tabs-panel" id="documents-tab" role="tabpanel" aria-hidden="true" aria-labelledby="documents-tab-label">
-            <h1>Documents</h1>
+          <div class="tabs-panel is-active" id="documents-tab" role="tabpanel" aria-hidden="true" aria-labelledby="documents-tab-label">
+            <a href="#" class="button" onclick="listDocuments()">List</a>
+            <span style="position: relative; top: -7px">
+              <label class="inline">Document ID</label>
+              <input class="inline" id="document-id" type="text" placeholder="..." style="width: 16rem"/>
+            </span>
+            <a href="#" class="button" onclick="getDocument()">Get</a>
+            <a href="#" class="button" onclick="createDocument()">Create</a>
+
+            <form class="row">
+              <div class="row columns">
+                <label>Title</label>
+                <input id="document-title" type="text" placeholder="Give your document a great title" />
+              </div>
+              <div class="row columns">
+                <textarea id="document-contents" placeholder="Write a great document ..." rows="10"></textarea/>
+              </div>
+            </form>
           </div>
           <div class="tabs-panel" id="messages-tab" role="tabpanel" aria-hidden="true" aria-labelledby="messages-tab-label">
             <h1>Messages</h1>
@@ -65,12 +79,14 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="large-12 columns">
-        <h4><a href="#" onclick="$('#log').val('');">Log</a></h4>
-        <textarea id="log" rows="10" style="font-size: 10pt; font-family: fixed"></textarea>
+    <footer style="height: 10rem; bottom: 0rem; width: 100%; position: fixed">
+      <div style="background-color: #EEE; border-top: 1px solid black;">
+        <div style="padding: 0.3rem">
+        <p style="height: 1rem; font-size: 0.8rem; margin-bottom: 0.4rem"><a href="#" onclick="$('#log').val('');">Debug</a></p>
+        <textarea id="log" style="height: 8rem; font-size: 10pt; font-family: fixed"></textarea>
       </div>
-    </div>
+      </div>
+    </footer>
 
     <script src="static/js/vendor/jquery.js"></script>
     <script src="static/js/vendor/what-input.js"></script>
