added user cookie

--- a/01 - InSecure-Box/public/index.html
+++ b/01 - InSecure-Box/public/index.html
@@ -24,7 +24,8 @@
           <div class="tabs-panel" id="users-tab" role="tabpanel" aria-hidden="false" aria-labelledby="users-tab-label">
             <a href="#" class="button" onclick="listUsers()">List</a>
             <a href="#" class="button" onclick="createUser()">Create</a>
-            <a href="#" class="button" onclick="checkPassword()">Check</a>
+            <a href="#" class="button" onclick="authLogin()">Login</a>
+            <a href="#" class="button" onclick="authLogout()">Logout</a>
 
             <form class="row">
               <div class="medium-3 columns">
