--- a/01-insecure-box/public/index.html
+++ b/01-insecure-box/public/index.html
@@ -13,15 +13,15 @@
       <div class="large-12 columns">
         <ul class="tabs" id="nav-tabs" data-tabs>
           <li class="tabs-title is-active" role="presentation">
-            <a href="#documents-tab" role="tab" aria-controls="documents-tab" aria-selected="false" id="documents-tab-label">Documents</a></li>
-          <li class="tabs-title" role="presentation">
-            <a href="#shared-tab" role="tab" aria-controls="shares-tab" aria-selected="false" id="shared-tab-label">Shares</a></li>
-          <li class="tabs-title" role="presentation">
             <a href="#users-tab" aria-selected="true" role="tab" aria-controls="users-tab" id="users-tab-label">Users</a></li>
+          <li class="tabs-title" role="presentation">
+            <a href="#documents-tab" role="tab" aria-controls="documents-tab" aria-selected="false" id="documents-tab-label">Documents</a></li>
+          <!--li class="tabs-title" role="presentation">
+            <a href="#shared-tab" role="tab" aria-controls="shares-tab" aria-selected="false" id="shared-tab-label">Shares</a></li-->
         </ul>
 
         <div class="tabs-content" data-tabs-content="nav-tabs">
-          <div class="tabs-panel" id="users-tab" role="tabpanel" aria-hidden="false" aria-labelledby="users-tab-label">
+          <div class="tabs-panel is-active" id="users-tab" role="tabpanel" aria-hidden="false" aria-labelledby="users-tab-label">
             <a href="#" class="button" onclick="listUsers()">List</a>
             <a href="#" class="button" onclick="createUser()">Create</a>
             <a href="#" class="button" onclick="authLogin()">Login</a>
@@ -50,7 +50,7 @@
             <a href="#" class="alert button">Alert Btn</a><br/>
             <a href="#" class="secondary button">Secondary Btn</a></p-->
           </div>
-          <div class="tabs-panel is-active" id="documents-tab" role="tabpanel" aria-hidden="true" aria-labelledby="documents-tab-label">
+          <div class="tabs-panel" id="documents-tab" role="tabpanel" aria-hidden="true" aria-labelledby="documents-tab-label">
             <a href="#" class="button" onclick="listDocuments()">List</a>
             <span style="position: relative; top: -7px">
               <label class="inline">Document ID</label>
