--- a/02-secure-box-normal/public/index.html
+++ b/02-secure-box-normal/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IN-secure:BOX Test</title>
+    <title>Secure:BOX (normal) Test</title>
     <link rel="stylesheet" href="static/css/foundation.css">
     <link rel="stylesheet" href="static/css/app.css">
   </head>
@@ -13,11 +13,11 @@
       <div class="large-12 columns">
         <ul class="tabs" id="nav-tabs" data-tabs>
           <li class="tabs-title is-active" role="presentation">
-            <a href="#documents-tab" role="tab" aria-controls="documents-tab" aria-selected="false" id="documents-tab-label">Documents</a></li>
-          <li class="tabs-title" role="presentation">
-            <a href="#shared-tab" role="tab" aria-controls="shares-tab" aria-selected="false" id="shared-tab-label">Shares</a></li>
-          <li class="tabs-title" role="presentation">
             <a href="#users-tab" aria-selected="true" role="tab" aria-controls="users-tab" id="users-tab-label">Users</a></li>
+          <li class="tabs-title" role="presentation">
+            <a href="#documents-tab" role="tab" aria-controls="documents-tab" aria-selected="false" id="documents-tab-label">Documents</a></li>
+          <!--li class="tabs-title" role="presentation">
+            <a href="#shared-tab" role="tab" aria-controls="shares-tab" aria-selected="false" id="shared-tab-label">Shares</a></li-->
         </ul>
 
         <div class="tabs-content" data-tabs-content="nav-tabs">
