--- a/03-secure-box-plus/public/index.html
+++ b/03-secure-box-plus/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IN-secure:BOX Test</title>
+    <title>Secure:BOX (Plus) Test</title>
     <link rel="stylesheet" href="static/css/foundation.css">
     <link rel="stylesheet" href="static/css/app.css">
   </head>
@@ -13,15 +13,15 @@
       <div class="large-12 columns">
         <ul class="tabs" id="nav-tabs" data-tabs>
           <li class="tabs-title is-active" role="presentation">
+            <a href="#users-tab" aria-selected="true" role="tab" aria-controls="users-tab" id="users-tab-label">Users</a></li>
+          <li class="tabs-title" role="presentation">
             <a href="#documents-tab" role="tab" aria-controls="documents-tab" aria-selected="false" id="documents-tab-label">Documents</a></li>
           <li class="tabs-title" role="presentation">
-            <a href="#shared-tab" role="tab" aria-controls="shares-tab" aria-selected="false" id="shared-tab-label">Shares</a></li>
-          <li class="tabs-title" role="presentation">
-            <a href="#users-tab" aria-selected="true" role="tab" aria-controls="users-tab" id="users-tab-label">Users</a></li>
+            <a href="#keys-tab" role="tab" aria-controls="keys-tab" aria-selected="false" id="keys-tab-label">Keys</a></li>
         </ul>
 
         <div class="tabs-content" data-tabs-content="nav-tabs">
-          <div class="tabs-panel" id="users-tab" role="tabpanel" aria-hidden="false" aria-labelledby="users-tab-label">
+          <div class="tabs-panel is-active" id="users-tab" role="tabpanel" aria-hidden="false" aria-labelledby="users-tab-label">
             <a href="#" class="button" onclick="listUsers()">List</a>
             <a href="#" class="button" onclick="createUser()">Create</a>
             <a href="#" class="button" onclick="authLogin()">Login</a>
@@ -50,7 +50,7 @@
             <a href="#" class="alert button">Alert Btn</a><br/>
             <a href="#" class="secondary button">Secondary Btn</a></p-->
           </div>
-          <div class="tabs-panel is-active" id="documents-tab" role="tabpanel" aria-hidden="true" aria-labelledby="documents-tab-label">
+          <div class="tabs-panel" id="documents-tab" role="tabpanel" aria-hidden="true" aria-labelledby="documents-tab-label">
             <a href="#" class="button" onclick="listDocuments()">List</a>
             <span style="position: relative; top: -7px">
               <label class="inline">Document ID</label>
@@ -69,12 +69,16 @@
               </div>
             </form>
           </div>
-          <div class="tabs-panel" id="messages-tab" role="tabpanel" aria-hidden="true" aria-labelledby="messages-tab-label">
-            <h1>Messages</h1>
-          </div>
-          <div class="tabs-panel" id="debug-tab" role="tabpanel" aria-hidden="true" aria-labelledby="debug-tab-label">
-            <div class="row columns">
-            </div>
+          <div class="tabs-panel" id="keys-tab" role="tabpanel" aria-hidden="true" aria-labelledby="keys-tab-label">
+            <a href="#" class="button" onclick="createAndSaveKey()">Create</a>
+            <a href="#" class="button" onclick="exportKey()">Export</a>
+            <a href="#" class="button" onclick="importKey()">Import</a>
+
+            <form class="row">
+              <div class="row columns">
+                <textarea id="key-blob" placeholder="JWK Key Blob ... copy or paste here ..." rows="10"></textarea/>
+              </div>
+            </form>
           </div>
         </div>
       </div>
@@ -93,7 +97,8 @@
     <script src="static/js/vendor/what-input.js"></script>
     <script src="static/js/vendor/foundation.js"></script>
     <script src="static/js/jose.js"></script>
-    <script src="static/js/jquery.indexeddb.js"></script>
+    <script src="static/js/keydb.js"></script>
+    <script src="static/js/keyutils.js"></script>
     <script src="static/js/app.js"></script>
 
     <script>
